[gd_scene load_steps=15 format=3 uid="uid://fudacns2hhxc"]

[ext_resource type="PackedScene" uid="uid://dh4s221kgtc83" path="res://assets/scenes/player.tscn" id="1_dl7al"]
[ext_resource type="Texture2D" uid="uid://bhfwj0h4o8usw" path="res://assets/art/lobby.png" id="2_jodbr"]
[ext_resource type="PackedScene" uid="uid://bptxe5n601tay" path="res://assets/scenes/drzwi.tscn" id="3_ov6w6"]
[ext_resource type="PackedScene" uid="uid://i5c8tomtxio3" path="res://assets/scenes/PizzaRestaurantStage2.tscn" id="5_u3ai4"]
[ext_resource type="Texture2D" uid="uid://blmg1facqqqec" path="res://assets/art/PIZZERIA.png" id="5_vssb1"]
[ext_resource type="Script" path="res://assets/scripts/shop.gd" id="6_xnblg"]
[ext_resource type="Texture2D" uid="uid://dvt8h0cp6d0ce" path="res://assets/art/szczur_sklep.png" id="7_msdo5"]
[ext_resource type="FontFile" uid="uid://calcttk5u4fvw" path="res://assets/fonts/PixeloidSansBold-PKnYd.ttf" id="8_cm11c"]
[ext_resource type="FontFile" uid="uid://ciwxw5qfslmqf" path="res://assets/fonts/PixeloidSans-mLxMm.ttf" id="8_wqpib"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmtqn"]
size = Vector2(24.3333, 5.99998)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0saq4"]
size = Vector2(1025, 9.33334)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7jtk"]
size = Vector2(30.0007, 791)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_no6py"]
size = Vector2(9.33334, 255)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_itq6h"]
size = Vector2(192, 230)

[node name="lobby" type="Node2D"]

[node name="Player" parent="." instance=ExtResource("1_dl7al")]
z_index = 2
position = Vector2(65, 497)

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_left = 20
limit_top = 20
limit_right = 3065
limit_bottom = 760
limit_smoothed = true
editor_draw_limits = true

[node name="PlayerDetector" type="Area2D" parent="Player"]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PlayerDetector"]
position = Vector2(0.166666, 35.6667)
shape = SubResource("RectangleShape2D_cmtqn")
debug_color = Color(0, 0, 0, 0.419608)

[node name="Background" type="StaticBody2D" parent="."]
position = Vector2(1537, 385)
scale = Vector2(3, 3)
collision_layer = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Background"]
z_index = -1
texture = ExtResource("2_jodbr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background"]
position = Vector2(-0.166687, 129.667)
shape = SubResource("RectangleShape2D_0saq4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Background"]
position = Vector2(-510.667, 0.166641)
scale = Vector2(0.333333, 0.333333)
shape = SubResource("RectangleShape2D_n7jtk")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Background"]
position = Vector2(514, -0.833359)
shape = SubResource("RectangleShape2D_no6py")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Background"]
position = Vector2(-512.333, -128.333)
scale = Vector2(0.333333, 0.333333)
polygon = PackedVector2Array(17, 384, 418.999, 382.999, 418.999, 354.999, 638, 357.999, 638, 381.999, 745.818, 380.907, 1105, 375.999, 1103, 346.999, 1238, 346.999, 1237, 373.999, 3080, 371, 3080, -9, 15, -15, 0, 0)

[node name="Drzwi2" parent="." instance=ExtResource("3_ov6w6")]
position = Vector2(867, -300)
collision_layer = 4
metadata/Scene = ExtResource("5_u3ai4")
metadata/Direction = "up"

[node name="CollisionShape2D" parent="Drzwi2" index="0"]
position = Vector2(297.5, 783)

[node name="Sprite2D" parent="Drzwi2" index="1"]
scale = Vector2(3, 3)
texture = ExtResource("5_vssb1")
offset = Vector2(0, -46.84)

[node name="Sklep" type="Area2D" parent="."]
script = ExtResource("6_xnblg")

[node name="Sprite2D" type="Sprite2D" parent="Sklep"]
position = Vector2(513, 479)
scale = Vector2(2.5, 2.5)
texture = ExtResource("7_msdo5")
offset = Vector2(0, -19.06)
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sklep"]
position = Vector2(535, 474)
shape = SubResource("RectangleShape2D_itq6h")

[node name="RichTextLabel" type="RichTextLabel" parent="Sklep"]
offset_left = 508.0
offset_top = 372.0
offset_right = 602.0
offset_bottom = 412.0
rotation = 0.248944
theme_override_fonts/normal_font = ExtResource("8_cm11c")
theme_override_font_sizes/normal_font_size = 27
text = "SHOP"

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 885.0
offset_top = 29.0
offset_right = 1710.0
offset_bottom = 144.0
color = Color(0.0901961, 0.0901961, 0.0901961, 1)
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
layout_mode = 0
offset_left = 40.0
offset_top = 23.0
offset_right = 765.0
offset_bottom = 106.0
theme_override_fonts/normal_font = ExtResource("8_wqpib")
theme_override_font_sizes/normal_font_size = 36
text = "To use door or shop, just run into it"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="ColorRect"]
layout_mode = 0
offset_left = 54.0
offset_top = 73.0
offset_right = 448.0
offset_bottom = 109.0
theme_override_fonts/normal_font = ExtResource("8_wqpib")
theme_override_font_sizes/normal_font_size = 16
text = "PS. This version includes cheat menu under `"
fit_content = true

[connection signal="area_entered" from="Player/PlayerDetector" to="Player" method="_on_player_detector_area_entered"]
[connection signal="area_entered" from="Sklep" to="Sklep" method="_on_area_entered"]
[connection signal="area_exited" from="Sklep" to="Sklep" method="_on_area_exited"]

[editable path="Drzwi2"]
